--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,7 +22,8 @@
       </p>
     </div>
 
-    <div class="mw-100">
+    <div class="mw-100 pt-3">
+      <h2 class="text-center">Let connect! Email me at <a href="mailto: wiessfeltk89@gmail.com">wiessfeltk89@gmail.com</a></h2>
       <img class="mw-100" src="/images/ad.png" />
     </div>
   </div>
