--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,10 +12,12 @@
             <img class="h-auto w-50 header-accent" src="../images/accent-left.png" />
           </div>
         </div>
-        <div id="accent-border" class="col-6 mt-5 mb-5">
-          <h1 class="text-center align-self-end">Katie Wiessfelt</h1>
+        <div id="accent-border" class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mt-5 mb-5">
+          <div class="text-center h1 align-self-end">Katie Wiessfelt</div>
           <hr class="thick-hr" />
-          <h2 class="text-center p-0 w-100">Web Developer</h2>
+          <div class="p-0 w-100 d-flex text-center justify-content-center h2">
+            Web Developer
+          </div>
           <hr class="thick-hr" />
         </div>
         <div class="col-3 d-flex align-items-end">
