--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -7,7 +7,7 @@
     <div class="p-5">
       <h2>Projects</h2>
       <h4>Wireframing, Coding</h4>
-      <div id="projects" class="row">
+      <div id="projects" class="row d-flex justify-content-around">
         <!-- Castle CMS -->
         <div class="col-lg-4 col-md-6 col-sm-12 p-3">
           <div class="card">
