--- a/views/home.ejs
+++ b/views/home.ejs
@@ -82,7 +82,7 @@
     </div>
     <%- include('partials/footer'); %>
       <script>
-        $('.overlay button').on('click', function () {
+        $('.btn-actions').on('click', function () {
           window.location = $(this).data('src')
         })
       </script>
