--- a/views/work_history.ejs
+++ b/views/work_history.ejs
@@ -3,166 +3,176 @@
 
 <%- include('partials/head'); %>
 
-<body>
-  <%- include('partials/header'); %>
-    <div class="p-3" id="work-history">
-      <h2 class="p-4">Work History</h2>
-      <div class="timeline">
-        <div class="timeline-container left">
-          <div class="content">
-            <div id="title">
-              <h4>Junior Web Developer</h4>
-              <h5>Nine by Six, Remote</h5>
-              <h5>September 2024 - Present</h5>
-            </div>
-            <ul>
-              <li>
-                Contribute to the design, development, and maintenance of dynamic web applications and websites
-              </li>
-              <li>
-                Develop clean, efficient, and well-documented code using HTML, CSS, and JavaScript, ensuring
-                responsiveness and functionality
-              </li>
-              <li>
-                Collaborate with senior developers to troubleshoot and implement features aligned with performance and
-                functional requirements
-              </li>
-              <li>
-                Participate in code reviews to enhance code quality and provide constructive feedback to peers
-              </li>
-              <li>
-                Identify, debug, and resolve user-reported and testing-found issues
-              </li>
-              <li>
-                Assist with integrating third-party APIs and services into applications
-              </li>
-              <li>
-                Stay updated on industry trends and technologies to enhance skill set and project outcomes
-              </li>
-              <li>
-                Utilize Git for version control and collaborate effectively within a team environment
-              </li>
-            </ul>
+  <body>
+    <%- include('partials/header'); %>
+      <div class="p-3" id="work-history">
+        <div class="row">
+          <div class="p-4 h2 col-6">
+            Work History
+          </div>
+          <div class="col-6 p-4 d-flex justify-content-end m-auto">
+            <a href="/files/resume.pdf" download id="download-btn" class="btn">
+              <i class="fa-solid fa-download"></i> Download Resume
+            </a>
           </div>
         </div>
-        <div class="timeline-container right">
-          <div class="content">
-            <div id="title">
-              <h4>Web Developer</h4>
-              <h5>Wildcard Corp., Stevens Point, WI</h5>
-              <h5>June 2022 - October 2024</h5>
+        <div class="timeline">
+          <div class="timeline-container left">
+            <div class="content">
+              <div id="title">
+                <h4>Junior Web Developer</h4>
+                <h5>Nine by Six, Remote</h5>
+                <h5>September 2024 - Present</h5>
+              </div>
+              <ul>
+                <li>
+                  Contribute to the design, development, and maintenance of dynamic web applications and websites
+                </li>
+                <li>
+                  Develop clean, efficient, and well-documented code using HTML, CSS, and JavaScript, ensuring
+                  responsiveness and functionality
+                </li>
+                <li>
+                  Collaborate with senior developers to troubleshoot and implement features aligned with performance and
+                  functional requirements
+                </li>
+                <li>
+                  Participate in code reviews to enhance code quality and provide constructive feedback to peers
+                </li>
+                <li>
+                  Identify, debug, and resolve user-reported and testing-found issues
+                </li>
+                <li>
+                  Assist with integrating third-party APIs and services into applications
+                </li>
+                <li>
+                  Stay updated on industry trends and technologies to enhance skill set and project outcomes
+                </li>
+                <li>
+                  Utilize Git for version control and collaborate effectively within a team environment
+                </li>
+              </ul>
             </div>
-            <ul>
-              <li>
-                Provide programming solutions and time-sensitive support for enterprise-level and major customers
-              </li>
-              <li>
-                Collaborate with project managers, programmers, systems developers, and web designers throughout the
-                website development process
-              </li>
-              <li>
-                Resolve complex technical design issues and conduct root cause analysis of system problems
-              </li>
-              <li>
-                Offer input and advice on company projects
-              </li>
-              <li>
-                Code, test, debug, and document software procedures and testing
-              </li>
-              <li>
-                Design new software, develop prototypes, and experiment with new applications; modify, expand, and
-                update existing applications
-              </li>
-              <li>
-                Research the latest news and techniques in software design and development
-              </li>
-              <li>
-                Plan and implement new software solutions across diverse platforms and frameworks
-              </li>
-              <li>
-                Mentor interns with weekly check-ins to address questions and blockers
-              </li>
-              <li>
-                Delegate tasks to ensure continued project development
-              </li>
-              <li>
-                Review pull requests and provide suggestions for improving code efficiency
-              </li>
-            </ul>
           </div>
-        </div>
-        <div class="timeline-container left">
-          <div class="content">
-            <div id="title">
-              <h4>Web Development Intern</h4>
-              <h5>Wildcard Corp., Stevens Point, WI</h5>
-              <h5>January 2022 - June 2022</h5>
+          <div class="timeline-container right">
+            <div class="content">
+              <div id="title">
+                <h4>Web Developer</h4>
+                <h5>Wildcard Corp., Stevens Point, WI</h5>
+                <h5>June 2022 - October 2024</h5>
+              </div>
+              <ul>
+                <li>
+                  Provide programming solutions and time-sensitive support for enterprise-level and major customers
+                </li>
+                <li>
+                  Collaborate with project managers, programmers, systems developers, and web designers throughout the
+                  website development process
+                </li>
+                <li>
+                  Resolve complex technical design issues and conduct root cause analysis of system problems
+                </li>
+                <li>
+                  Offer input and advice on company projects
+                </li>
+                <li>
+                  Code, test, debug, and document software procedures and testing
+                </li>
+                <li>
+                  Design new software, develop prototypes, and experiment with new applications; modify, expand, and
+                  update existing applications
+                </li>
+                <li>
+                  Research the latest news and techniques in software design and development
+                </li>
+                <li>
+                  Plan and implement new software solutions across diverse platforms and frameworks
+                </li>
+                <li>
+                  Mentor interns with weekly check-ins to address questions and blockers
+                </li>
+                <li>
+                  Delegate tasks to ensure continued project development
+                </li>
+                <li>
+                  Review pull requests and provide suggestions for improving code efficiency
+                </li>
+              </ul>
             </div>
-            <ul>
-              <li>
-                Write reusable, testable, and efficient code
-              </li>
-              <li>
-                Construct, test, and develop custom web applications for client and corporate use
-              </li>
-              <li>
-                Diagnose and fix programming issues and bugs
-              </li>
-              <li>
-                Learn and utilize open-source tools for websites
-              </li>
-              <li>
-                Contribute effectively as a member of an agile development team
-              </li>
-              <li>
-                Develop and expand programming language knowledge and skills
-              </li>
-            </ul>
           </div>
-        </div>
-        <div class="timeline-container right">
-          <div class="content">
-            <div id="title">
-              <h4>UWSP Center for Land Use Education</h4>
-              <h5>Student Web/Game Developer, Stevens Point, WI</h5>
-              <h5>September 2021 - January 2022</h5>
+          <div class="timeline-container left">
+            <div class="content">
+              <div id="title">
+                <h4>Web Development Intern</h4>
+                <h5>Wildcard Corp., Stevens Point, WI</h5>
+                <h5>January 2022 - June 2022</h5>
+              </div>
+              <ul>
+                <li>
+                  Write reusable, testable, and efficient code
+                </li>
+                <li>
+                  Construct, test, and develop custom web applications for client and corporate use
+                </li>
+                <li>
+                  Diagnose and fix programming issues and bugs
+                </li>
+                <li>
+                  Learn and utilize open-source tools for websites
+                </li>
+                <li>
+                  Contribute effectively as a member of an agile development team
+                </li>
+                <li>
+                  Develop and expand programming language knowledge and skills
+                </li>
+              </ul>
             </div>
-            <ul>
-              <li>
-                Converted a physical board game to an online platform using Construct 3
-              </li>
-              <li>
-                Provided regular updates to the development team and ensuring project milestones were met on time
-              </li>
-            </ul>
           </div>
-        </div>
-        <div class="timeline-container left">
-          <div class="content">
-            <div id="title">
-              <h4>UWSP Center for Land Use Education</h4>
-              <h5>Student Web/Game Developer, Stevens Point, WI</h5>
-              <h5>September 2021 - January 2022</h5>
+          <div class="timeline-container right">
+            <div class="content">
+              <div id="title">
+                <h4>UWSP Center for Land Use Education</h4>
+                <h5>Student Web/Game Developer, Stevens Point, WI</h5>
+                <h5>September 2021 - January 2022</h5>
+              </div>
+              <ul>
+                <li>
+                  Converted a physical board game to an online platform using Construct 3
+                </li>
+                <li>
+                  Provided regular updates to the development team and ensuring project milestones were met on time
+                </li>
+              </ul>
             </div>
-            <ul>
-              <li>
-                Managed and updated the WIPPS website, including maintaining event pages, coordinating updates, and ensuring that the website effectively supported organizational activities
-              </li>
-              <li>
-                Oversaw database management and facilitated the technology needs of the staff
-              </li>
-              <li>
-                Contributed to the smooth operation of conferences and other events
-              </li>
-            </ul>
+          </div>
+          <div class="timeline-container left">
+            <div class="content">
+              <div id="title">
+                <h4>UWSP Center for Land Use Education</h4>
+                <h5>Student Web/Game Developer, Stevens Point, WI</h5>
+                <h5>September 2021 - January 2022</h5>
+              </div>
+              <ul>
+                <li>
+                  Managed and updated the WIPPS website, including maintaining event pages, coordinating updates, and
+                  ensuring that the website effectively supported organizational activities
+                </li>
+                <li>
+                  Oversaw database management and facilitated the technology needs of the staff
+                </li>
+                <li>
+                  Contributed to the smooth operation of conferences and other events
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <%- include('partials/footer'); %>
-</body>
+      <%- include('partials/footer'); %>
+  </body>
 
-<link rel="stylesheet" href="/css/work_history.css">
+  <link rel="stylesheet" href="/css/work_history.css">
 
 </html>
