register with google search

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,5 +3,6 @@
     <%= title %>
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="tDik0K82o-RSn12odZkhdGzdCVxY7ZiQSoXgl_aOqlw" />
   <%- include('styles'); %>
 </head>
