--- a/views/projects/bed_and_biscuits.ejs
+++ b/views/projects/bed_and_biscuits.ejs
@@ -30,25 +30,25 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/projects/b&b/moodBoard.png" class="d-block w-100" alt="moodBoard.png">
+              <img src="/images/projects/bed-and-biscuits/moodBoard.png" class="d-block w-100" alt="moodBoard.png">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Mood Board</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/projects/b&b/home.png" class="d-block w-100" alt="home.png">
+              <img src="/images/projects/bed-and-biscuits/home.png" class="d-block w-100" alt="home.png">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Home Page</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/projects/b&b/bakery.png" class="d-block w-100" alt="bakery.png">
+              <img src="/images/projects/bed-and-biscuits/bakery.png" class="d-block w-100" alt="bakery.png">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Bakery</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/projects/b&b/menuDisplay.png" class="d-block w-100" alt="menuDisplay.png">
+              <img src="/images/projects/bed-and-biscuits/menuDisplay.png" class="d-block w-100" alt="menuDisplay.png">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Menu Display</h5>
               </div>
