--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -10,7 +10,15 @@
 
   .skill-box {
     text-align: center;
-    @media (max-width: 768px) {
+    @media (max-width: 500px) {
+      /* small screen */
+      padding: 3em 2em;
+      &:nth-child(2) {
+        border-top: 5px solid var(--cyan);
+        border-bottom: 5px solid var(--cyan);
+      }
+    }
+    @media (max-width: 768px) and (min-width: 500px) {
       /* small screen */
       padding: 5em 10em;
       &:nth-child(2) {
