--- a/public/css/header.css
+++ b/public/css/header.css
@@ -3,6 +3,42 @@
   background: rgba(255, 0, 245, 0.25);
   border-bottom: 2px solid var(--magenta);
 }
+#header #full-nav {
+  display: flex;
+}
+@media (max-width: 499px) {
+  #header #full-nav {
+    display: none;
+  }
+}
+@media (min-width: 500px) {
+  #header #mobile-nav {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  #header #mobile-nav {
+    display: flex;
+  }
+  #header #mobile-nav > i {
+    font-size: 3em;
+  }
+  #header #mobile-nav .overlay {
+    position: absolute;
+    z-index: 1;
+    width: 100vw;
+    height: fit-content;
+    left: 0px;
+    top: 82px;
+    background: rgb(65, 9, 62);
+  }
+  #header #mobile-nav .overlay a {
+    color: white;
+  }
+  #header #mobile-nav .overlay {
+    box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
+  }
+}
 #header ul {
   list-style-type: none;
 }
