--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
   <%- include('partials/header'); %>
   <div class="row p-5 d-flex" id="about">
     <div class="about-images p-5 d-flex justify-content-around">
-      <img style="max-width: 500px;" src="/images/about.png" />
+      <img class="mw-100" src="/images/about.png" />
     </div>
     <div class="about-blurb">
       <h1>About Me</h1>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="mw-100 pt-3">
-      <h2 class="text-center">Let connect! Email me at <a href="mailto: wiessfeltk89@gmail.com">wiessfeltk89@gmail.com</a></h2>
+      <h2 class="text-center">Let connect! Email me at <a href="mailto: wiessfeltk89@gmail.com" style="word-wrap: break-word;">wiessfeltk89@gmail.com</a></h2>
       <img class="mw-100" src="/images/ad.png" />
     </div>
   </div>
