--- a/public/scss/about.scss
+++ b/public/scss/about.scss
@@ -5,7 +5,7 @@
             width: 41.66666667%;
         }
         @media (max-width: 1536px) {
-            height: 500px;
+            height: auto;
             width: 100%;
         }
     }
