--- a/views/projects/bed_and_biscuits.ejs
+++ b/views/projects/bed_and_biscuits.ejs
@@ -54,19 +54,19 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/projects/b&b/boarding.png" class="d-block w-100" alt="boarding.png">
+              <img src="/images/projects/bed-and-biscuits/boarding.png" class="d-block w-100" alt="boarding.png">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Boarding</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/projects/b&b/boardingMemberPage.png" class="d-block w-100" alt="boardingMemberPage.png">
+              <img src="/images/projects/bed-and-biscuits/boardingMemberPage.png" class="d-block w-100" alt="boardingMemberPage.png">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Boarding Member Page</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/projects/b&b/about.png" class="d-block w-100" alt="about.png">
+              <img src="/images/projects/bed-and-biscuits/about.png" class="d-block w-100" alt="about.png">
               <div class="carousel-caption d-none d-md-block">
                 <h5>About Page</h5>
               </div>
